# a11y-scanner

./: .dockerignore  .dockerignore.test  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_MSG.txt  CONTRIBUTING.md  CONTRIBUTORS.md  GOLDEN_TESTS.md  HANDOFF.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  TEST_RESULTS.md  docker-compose.yml  flattened_repo.md  pyproject.toml  scan_live_site.py  security.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: .gitkeep
data/reports/: latest.html
docker/: Dockerfile  Dockerfile.test
docs/: architecture-overview.md  architecture.md  development-guide.md
examples/: ci-github-actions.yml  docker-compose.yml  nginx.conf
scripts/: complete_setup.sh  create_test_site.sh  e2e_test_audit.py  prepare_release.sh  run_golden_tests.py  run_integration_tests.sh  test_in_docker.sh  test_reporting.sh  update_golden_files.sh
src/scanner/: cli.py  main.py  pipeline.py
src/scanner/container/: __init__.py  integration.py  manager.py  runner.py
src/scanner/core/: __init__.py  logging_setup.py  settings.py
src/scanner/reporting/: __init__.py  jinja_report.py
src/scanner/services/: __init__.py  html_discovery_service.py  http_service.py  playwright_axe_service.py  zip_service.py
src/scanner/templates/: a11y_report.html.j2
src/scanner/utils/: __init__.py  json_utils.py
src/scanner/web/: __init__.py  server.py
test_data/reports/: test_report.html
test_data/results/: sample1.json  sample2.json  sample3.json
tests/: test_api.py  test_html_discovery_service.py  test_http_service.py  test_pipeline.py  test_reporting.py  test_settings.py  test_zip_service.py
tests/assets/html_sets/1/: cart.js  component.css  index.html  layout.css  script.js  style.css  utils.js
tests/assets/html_sets/1/golden_results/: report.json
tests/assets/html_sets/2/golden_results/: report.json
tests/assets/html_sets/3/golden_results/: report.json
tests/assets/html_sets/4/: index.html  style.css
tests/assets/html_sets/4/golden_results/: report.json
tests/assets/html_sets/5/: about.html  contact.html  index.html  product-detail.html  products.html  style.css
tests/assets/html_sets/5/golden_results/: report.json
tests/assets/html_sets/6/: blog.html  contact.html  features.html  index.html  pricing.html  script.js  style.css
tests/assets/html_sets/6/golden_results/: report.json
tests/assets/html_sets/7/: about.html  index.html  package.json
tests/assets/html_sets/7/golden_results/: report.json
tests/assets/html_sets/7/src/js/: animation.js  main.js  ui.js
tests/assets/html_sets/7/src/styles/: _base.scss  _components.scss  _variables.scss  main.scss
tests/assets/html_sets/7/src/styles/compiled/: style.css
tests/assets/html_sets/Charitize/golden_results/: report.json
tests/assets/html_sets/Flat/golden_results/: report.json
tests/services/: test_playwright_axe_service.py
