[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a11y-scanner"
version = "0.4.0"
description = "A containerized web accessibility scanner using Playwright and axe-core for comprehensive WCAG compliance testing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Matt", email = "matthewboback@gmail.com" }]
keywords = [
    "accessibility",
    "a11y",
    "wcag",
    "testing",
    "playwright",
    "axe",
    "scanner",
    "compliance",
    "docker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Playwright",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

# Pinned dependencies for reproducibility
dependencies = [
  "rich==13.9.4",
  "axe-playwright-python==0.1.4",
  "playwright==1.54.0",
  "docker==7.1.0",
  "jinja2==3.1.5",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.2",
  "python-multipart==0.0.20",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pyfakefs==5.7.2",
    "pytest-cov==6.0.0",
    "requests==2.32.3",
    "httpx==0.28.1"
]
dev = [
    "a11y-scanner[test]",
    "black==24.10.0",
    "ruff==0.8.4"
]

[tool.setuptools.package-data]
"scanner" = ["templates/*.j2"]

[project.scripts]
scanner = "scanner.main:main"
scanner-docker = "scanner.container.runner:main"
scanner-integration = "scanner.container.integration:main"
scanner-api = "scanner.web.server:run"

[project.urls]
Homepage = "https://github.com/mattboback/a11y-scanner"
Documentation = "https://github.com/mattboback/a11y-scanner/blob/main/README.md"
Repository = "https://github.com/mattboback/a11y-scanner"
Issues = "https://github.com/mattboback/a11y-scanner/issues"
Changelog = "https://github.com/mattboback/a11y-scanner/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "I", "B", "UP"]
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers --cov=src --cov-report=html"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
